--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -3,7 +3,7 @@
     <h1 class="coverphoto-title">
       Novos episódios todas as sextas-feiras
     </h1>
-    <nav class="social-nav">
+    <!-- <nav class="social-nav">
       <ul>
         {% for service in site.services %}
           <li>
@@ -13,6 +13,6 @@
           </li>
         {% endfor %}
       </ul>
-    </nav>
+    </nav> -->
   </div>
 </section>
