--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,11 +1,23 @@
 <footer>
 	<div class="container">
 		<section class="profile">
+			<figure class="profile__image profile__image--dne"></figure>
+			<span class="profile__name">DEVNAESTRADA</span>
+			<span class="profile__role">Podcast</span>
+			<div class="profile__twitter">
+				<a href="https://twitter.com/devnaestrada" class="twitter-follow-button" data-show-count="false">
+					<i class="fa fa-twitter"></i> @devnaestrada
+				</a>
+			</div>
+		</section>
+		<section class="profile">
 			<figure class="profile__image profile__image--femontanha"></figure>
 			<span class="profile__name">Fellipe Azambuja</span>
 			<span class="profile__role">Host & Front-end Developer</span>
 			<div class="profile__twitter">
-				<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">Follow @femontanha</a>
+				<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">
+					<i class="fa fa-twitter"></i> @femontanha
+				</a>
 			</div>
 		</section>
 		<section class="profile">
@@ -13,7 +25,9 @@
 			<span class="profile__name">Ramon Sanches</span>
 			<span class="profile__role">Co-Host & Senior PHP Developer</span>
 			<div class="profile__twitter">
-				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
+				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">
+					<i class="fa fa-twitter"></i> @raymonsanches
+				</a>
 			</div>
 		</section>
 		<section class="profile">
@@ -21,7 +35,9 @@
 			<span class="profile__name">Eduardo Matos</span>
 			<span class="profile__role">FullStack Developer</span>
 			<div class="profile__twitter">
-				<a href="https://twitter.com/eduardojmatos" class="twitter-follow-button" data-show-count="false">Follow @eduardojmatos</a>
+				<a href="https://twitter.com/eduardojmatos" class="twitter-follow-button" data-show-count="false">
+					<i class="fa fa-twitter"></i> @eduardojmatos
+				</a>
 			</div>
 		</section>
 	</div>
