--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -1,6 +1,6 @@
 <header>
 	<a href="/" class="header-brand">
-		<img src="{{ "public/assets/img/devnaestrada.png" | prepend: site.baseurl }}" alt="DEVNAESTRADA logo" />
+		<img src="{{ "public/assets/img/devnaestrada-lg.png" | prepend: site.baseurl }}" alt="DEVNAESTRADA logo" />
 	</a>
 
 	<label for="nav-btn" class="fa fa-bars nav-label" aria-hidden="true"></label>
@@ -15,7 +15,7 @@
 				<a href="{{ "contato" | prepend: site.baseurl }}" class="header-nav-link btn">Contato</a>
 			</li>
 			<li>
-				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Doar/Apoiar o DNE</a>
+				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn header-nav-link--apoiase" target="_blank">Apoia.se/DEVNAESTRADA</a>
 			</li>
 		</ul>
 	</nav>
