--- a/_includes/structure/footer-scripts.html
+++ b/_includes/structure/footer-scripts.html
@@ -1,3 +1,3 @@
-<script type="text/javascript" src="{{ 'js/quick-access.js' | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ 'js/azepto.js' | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ 'js/search.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ 'assets/js/quick-access.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ 'assets/js/azepto.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ 'assets/js/search.js' | prepend: site.baseurl }}"></script>
