--- a/_scss/modules/_post-youtube.scss
+++ b/_scss/modules/_post-youtube.scss
@@ -5,11 +5,11 @@
 // *************************************
 
 .post-youtube {
-  margin-top: rem(60);
+  margin-top: 60px;
 }
 
 .post-youtube-title {
-  font-size: rem(32);
+  font-size: 32px;
   margin-top: 0;
 }
 
