--- a/_scss/modules/_search.scss
+++ b/_scss/modules/_search.scss
@@ -25,7 +25,7 @@
     display: none;
   }
   h4 {
-    margin-top: rem(15);
-    margin-bottom: rem(15);
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 }
