--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -1,36 +1,31 @@
-// core
-// @import "core/config/colors";
-// @import "core/config/units";
-// @import "core/config/typograph";
-// @import "core/extend/inline-block";
-// @import "core/animation";
-//
-// // font
-// @import "modules/font/fontawesome/font-awesome";
-//
-// // modules
-// @import "modules/navigation/buttons";
-// @import "modules/structure/header";
-// @import "modules/structure/footer";
-// @import "modules/structure/cover-photo";
-// @import "modules/quick-access";
-// @import "modules/search";
-// @import "modules/navigation/pagination";
-// @import "modules/blocks/post-cast";
-// @import "modules/post-participants";
-// @import "modules/post-links-sponsors";
-// @import "modules/post-youtube";
-// @import "modules/post-support";
-// @import "modules/partners";
-// @import "modules/episodes";
-// @import "modules/episode";
-// @import "modules/community";
-// @import "modules/form";
-//
-// // layout
-// @import "layout/structure";
-// @import "layout/page-404";
+@import "vendor/normalize-scss/normalize";
 
-body {
-  background-color: yellow;
-}
+@import "config/colors";
+@import "config/units";
+@import "config/typograph";
+@import "config/inline-block";
+@import "config/animation";
+
+@import "modules/font/fontawesome/font-awesome";
+
+@import "modules/navigation/buttons";
+@import "modules/structure/header";
+@import "modules/structure/footer";
+@import "modules/structure/cover-photo";
+
+@import "modules/quick-access";
+@import "modules/search";
+@import "modules/navigation/pagination";
+@import "modules/blocks/post-cast";
+@import "modules/post-participants";
+@import "modules/post-links-sponsors";
+@import "modules/post-youtube";
+@import "modules/post-support";
+@import "modules/partners";
+@import "modules/episodes";
+@import "modules/episode";
+@import "modules/community";
+@import "modules/form";
+
+@import "pages/structure";
+@import "pages/page-404";
