--- a/_scss/modules/_post-support.scss
+++ b/_scss/modules/_post-support.scss
@@ -9,11 +9,11 @@
     background-color: $primary-color;
     color: $ligten;
     font-weight: bold;
-    padding: rem(2) rem(5);
+    padding: 2px 5px;
   }
 
   .btn {
     display: block;
-    max-width: rem(300);
+    max-width: 300px;
   }
 }
