--- a/_scss/modules/font/fontawesome/_variables.scss
+++ b/_scss/modules/font/fontawesome/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$fa-font-path:        "../public/assets/fonts/fontawesome" !default;
+$fa-font-path:        "../fonts/fontawesome" !default;
 $fa-font-size-base:   14px !default;
 $fa-line-height-base: 1 !default;
 //$fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.4.0/fonts" !default; // for referencing Bootstrap CDN font files directly
@@ -685,4 +685,3 @@ $fa-var-yen: "\f157";
 $fa-var-youtube: "\f167";
 $fa-var-youtube-play: "\f16a";
 $fa-var-youtube-square: "\f166";
-
