--- a/_scss/modules/navigation/_buttons.scss
+++ b/_scss/modules/navigation/_buttons.scss
@@ -1,6 +1,5 @@
 .btn {
   @extend %inline-middle-block;
-  @include transition(background-color .2s ease-in-out, color .2s ease-in-out);
   background-color: transparent;
   border-radius: 3px;
   border: 2px solid $primary-color;
@@ -11,6 +10,7 @@
   padding: 0.6em 1.2em;
   text-align: center;
   text-transform: uppercase;
+  transition: background-color .2s ease-in-out, color .2s ease-in-out;
 
   &:hover,
   &.active {
