--- a/_scss/modules/structure/_cover-photo.scss
+++ b/_scss/modules/structure/_cover-photo.scss
@@ -3,19 +3,19 @@
 ////////////////////////////////
 
 .coverphoto {
-  @include align-items(center);
-  @include display(flex);
-  @include justify-content(center);
-  @include animation(coverphoto 50s linear infinite);
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  animation: coverphoto 50s linear infinite;
   background: {
     color: $darken;
-    image: url(../public/assets/img/pattern-px.png);
+    image: url(../img/pattern-px.png);
     position: left bottom;
     repeat: repeat;
   };
-  max-height: rem(100);
+  max-height: 100px;
   max-width: 100%;
-  padding: rem(20);
+  padding: 20px;
   text-align: center;
 
   @media screen and (min-width: $tablet) {
@@ -26,12 +26,12 @@
 
 .coverphoto-title {
   color: $ligten;
-  font-size: rem(18);
+  font-size: 18px;
   font-weight: 600;
   margin: 0 auto;
-  max-width: rem(600);
+  max-width: 600px;
 
   @media screen and (min-width: $tablet) {
-    font-size: rem(24);
+    font-size: 24px;
   }
 }
