--- a/_scss/modules/structure/_footer.scss
+++ b/_scss/modules/structure/_footer.scss
@@ -26,11 +26,11 @@ footer {
   width: 50px;
 
   &.profile__image--femontanha {
-    background-image: url('http://pbs.twimg.com/profile_images/849471628966756354/q1_8jz9V.jpg');
+    background-image: url('https://pbs.twimg.com/profile_images/849471628966756354/q1_8jz9V.jpg');
   }
 
   &.profile__image--raymon {
-    background-image: url('http://pbs.twimg.com/profile_images/815923259422244864/EZs8WgQ3.jpg');
+    background-image: url('https://pbs.twimg.com/profile_images/815923259422244864/EZs8WgQ3.jpg');
   }
 
   &.profile__image--edu {
