more files changes to https

--- a/_includes/modules/post-participants.html
+++ b/_includes/modules/post-participants.html
@@ -9,7 +9,7 @@
       {% for participant in page.participants %}
         <li>
           {{ participant.name }}<br />
-          <a href="http://twitter.com/{{ participant.twitter }}" class="post-links twitter" target="_blank">@{{ participant.twitter }}</a>
+          <a href="https://twitter.com/{{ participant.twitter }}" class="post-links twitter" target="_blank">@{{ participant.twitter }}</a>
         </li>
       {% endfor %}
     </ul>
