--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -2,13 +2,8 @@
   <h2>Próximos Eventos</h2>
   <ul>
     <li>
-      <a href="http://lwgo.to/rubyconfdne" class="post-links-link" target="_blank">
-        Ruby Conf (30% de desconto use o código PRCDNE)
-      </a>
-    </li>
-    <li>
-      <a href="http://riosulvalley.com.br/devsummit" class="post-links-link" target="_blank">
-        RSV DEV SUMMIT
+      <a href="https://devfestxp.com" class="post-links-link" target="_blank">
+        DEVFEST XP RECIFE 2017
       </a>
     </li>
   </ul>
