--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -1,6 +1,8 @@
 <section class="post-support">
   <a href="http://bit.ly/dne-apoiase" target="_blank">
-    <img style="max-width: 320px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/apoiase.jpg" alt="apoia.se/devnaestrada" />
+    <img style="max-width: 150px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/apoiase.jpg" alt="apoia.se/devnaestrada" />
   </a>
-  <img style="max-width: 320px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/picpay.jpg" alt="Doações para Picpay @femontanha" />
+  <a href="https://www.picpay.com" target="_blank">
+    <img style="max-width: 150px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/picpay.jpg" alt="Doações para Picpay @femontanha" />
+  </a>
 </section>
