Add Bitcoin Support Comment Next Events

--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -2,8 +2,8 @@
   <h2>Próximos Eventos</h2>
   <ul>
     <li>
-      <a href="https://devfestxp.com" class="post-links-link" target="_blank">
-        DEVFEST XP RECIFE 2017
+      <a href="" class="post-links-link" target="_blank">
+
       </a>
     </li>
   </ul>
