--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -1,8 +1,18 @@
 <section class="post-support">
-  <a href="http://bit.ly/dne-apoiase" target="_blank">
-    <img style="max-width: 150px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/apoiase.jpg" alt="apoia.se/devnaestrada" />
-  </a>
-  <a href="https://www.picpay.com" target="_blank">
-    <img style="max-width: 150px; margin-top: 15px;" src="https://devnaestrada.com.br/assets/img/picpay.jpg" alt="Doações para Picpay @femontanha" />
-  </a>
+  <h2>Doar/Apoio Financeiro</h2>
+
+  <ul>
+    <li>
+      Financiamento continuo: <a href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
+    </li>
+    <li>
+      <a href="https://www.picpay.com/site/">Picpay</a>: usuário <strong>@femontanha</strong>
+    </li>
+    <li>
+      Bitcoin: <strong>1P9LqMBJ7jx6jm4zzkrVzAK9GKuYJ8byUX</strong>
+    </li>
+  </ul>
+
+  <img style="margin-top: 10px" src="https://blockchain.info/qr?data=1P9LqMBJ7jx6jm4zzkrVzAK9GKuYJ8byUX&amp;size=125">
+
 </section>
