--- a/_scss/modules/_post-support.scss
+++ b/_scss/modules/_post-support.scss
@@ -6,10 +6,8 @@
 
 .post-support {
   .highlight {
-    background-color: $primary-color;
-    color: $ligten;
-    font-weight: bold;
-    padding: 2px 5px;
+    color: $primary-color;
+    text-decoration: underline;
   }
 
   .btn {
