--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -3,13 +3,13 @@
 
   <ul>
     <li>
-      Financiamento continuo: <a href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
+      Seja assinante e tenha acesso a conteúdo exclusivo: <a class="highlight" href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
     </li>
     <li>
-      <a href="https://www.picpay.com/site/">Picpay</a>: usuário <strong>@femontanha</strong>
+      Faça uma doação pelo Picpay: <a class="highlight" href="https://app.picpay.com/user.html?femontanha">Doar!</a>
     </li>
     <li>
-      Bitcoin: <strong>1P9LqMBJ7jx6jm4zzkrVzAK9GKuYJ8byUX</strong>
+      Doe com Bitcoin: <strong>1P9LqMBJ7jx6jm4zzkrVzAK9GKuYJ8byUX</strong>
     </li>
   </ul>
 
