DNE 139 - Universo Bitcoin

--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -3,7 +3,7 @@
 
   <ul>
     <li>
-      Seja assinante e tenha acesso a conteúdo exclusivo: <a class="highlight" href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
+      Quer fazer uma doação recorrente? <a class="highlight" href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
     </li>
     <li>
       Faça uma doação pelo Picpay: <a class="highlight" href="https://app.picpay.com/user.html?femontanha">Doar!</a>
