--- a/_includes/modules/post-extras.html
+++ b/_includes/modules/post-extras.html
@@ -4,6 +4,8 @@
 
 {% include modules/post-links.html %}
 
+{% include modules/post-scraps.html %}
+
 <!-- {% include modules/next-events.html %} -->
 
 {% include modules/supporter.html %}
