Added subject field in contact form

--- a/_scss/modules/_form.scss
+++ b/_scss/modules/_form.scss
@@ -62,3 +62,15 @@ $scaffold: '.form';
 .form-submit {
   cursor: pointer;
 }
+
+// -------------------------------------
+//   Form Select
+// -------------------------------------
+
+.select {
+  display: block;
+  width: 104.8%;
+  margin-top: 5px;
+  padding: 10px 15px;
+  background-color: white;
+}
