--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -40,6 +40,7 @@
 
   <link rel="publisher" href="https://plus.google.com/+DevnaestradaBrazil/">
   <link rel="stylesheet" href="{{ "assets/css/main.css" | prepend: site.baseurl }}">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100|Rubik:400,500" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
@@ -67,7 +68,4 @@
   {% if site.google_analytics %}
     {% include vendor/ga.html %}
   {% endif %}
-
-  <script type="text/javascript" src="//use.typekit.net/omp7orf.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
