--- a/_scss/config/_colors.scss
+++ b/_scss/config/_colors.scss
@@ -5,7 +5,7 @@ $neutral: gray !default;
 $neutral-light: #e2e2e2 !default;
 
 // core colors
-$primary-color: #E67E22 !default;
+$primary-color: #3CD52E !default;
 
 // base colors
 $link-color: #21272d !default;
