--- a/_scss/config/_units.scss
+++ b/_scss/config/_units.scss
@@ -1,5 +1,5 @@
 // font
-$base-font-size: 17px;
+$base-font-size: 16px;
 
 // media query
 $iphone-retina: 320px;
@@ -11,3 +11,13 @@ $desktop: 1200px;
 
 // borders
 $base-radius: 3px;
+
+// Width App
+$app-max-width: 940px;
+
+// Margin & Paddings
+$app-default-margin: 30px;
+
+// Font 
+$rubik-font: 'Rubik', sans-serif;
+$roboto-font: 'Roboto', sans-serif;
