--- a/_scss/pages/_structure.scss
+++ b/_scss/pages/_structure.scss
@@ -1,24 +1,15 @@
+html {
+  font-size: 16px;
+}
+
 body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-  color: $base-text-color;
-  font-family: $base-font;
-  font-size: $base-font-size;
+  color: #707070;
+  font-family: $roboto-font;
   text-rendering: optimizeLegibility;
 	margin: 0;
 	padding: 0;
-}
-
-a {
-  transition: color .2s ease-in-out;
-  text-decoration: none;
-  color: $link-color;
-  outline: none;
-
-  &:hover,
-  &:active {
-    color: $link-hover-color;
-  }
 }
 
 .image-block {
@@ -43,12 +34,11 @@ a {
   font-size: 18px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 710px;
+  max-width: $app-max-width;
   padding: 30px;
 }
 
 // page
-
 .page__title {
   margin-top: 0;
 }
