New layout for default page

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,44 +1,25 @@
 <footer>
-	<div class="container">
-		<section class="profile">
-			<figure class="profile__image profile__image--dne"></figure>
-			<span class="profile__name">DEVNAESTRADA</span>
-			<span class="profile__role">Podcast</span>
-			<div class="profile__twitter">
-				<a href="https://twitter.com/devnaestrada" class="twitter-follow-button" data-show-count="false">
-					<i class="fa fa-twitter"></i> @devnaestrada
-				</a>
-			</div>
-		</section>
-		<section class="profile">
+	<div class="container">	
+		<a class="profile" href="https://twitter.com/femontanha">
 			<figure class="profile__image profile__image--femontanha"></figure>
-			<span class="profile__name">Fellipe Azambuja</span>
-			<span class="profile__role">Host & Front-end Developer</span>
-			<div class="profile__twitter">
-				<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">
-					<i class="fa fa-twitter"></i> @femontanha
-				</a>
+			<div class="profile__info">
+				<span class="profile__name">Fellipe Azambuja @femontanha</span>
+				<span class="profile__role">Host & Front-end Developer</span>
 			</div>
-		</section>
-		<section class="profile">
+		</a>
+		<a class="profile" href="https://twitter.com/raymonsanches">
 			<figure class="profile__image profile__image--raymon"></figure>
-			<span class="profile__name">Ramon Sanches</span>
-			<span class="profile__role">Co-Host & Senior PHP Developer</span>
-			<div class="profile__twitter">
-				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">
-					<i class="fa fa-twitter"></i> @raymonsanches
-				</a>
+			<div class="profile__info">
+				<span class="profile__name">Ramon Sanches @raymonsanches</span>
+				<span class="profile__role">Co-Host & Senior PHP Developer</span>
 			</div>
-		</section>
-		<section class="profile">
+		</a>
+		<a class="profile" href="https://twitter.com/eduardojmatos">
 			<figure class="profile__image profile__image--edu"></figure>
-			<span class="profile__name">Eduardo Matos</span>
-			<span class="profile__role">FullStack Developer</span>
-			<div class="profile__twitter">
-				<a href="https://twitter.com/eduardojmatos" class="twitter-follow-button" data-show-count="false">
-					<i class="fa fa-twitter"></i> @eduardojmatos
-				</a>
+			<div class="profile__info">
+				<span class="profile__name">Eduardo Matos @eduardojmatos</span>
+				<span class="profile__role">FullStack Developer</span>		
 			</div>
-		</section>
+		</a>
 	</div>
 </footer>
