--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
     {% include structure/header.html %}
     {% include modules/cover-photo.html %}
 
-    <div class="container">
-      {{ content }}
-    </div>
+    <main class="main">
+      <div class="container">
+        {{ content }}
+      </div>
+    </main>
 
     {% include structure/footer.html %}
     {% include structure/footer-scripts.html %}
