--- a/_scss/pages/_structure.scss
+++ b/_scss/pages/_structure.scss
@@ -30,15 +30,21 @@ body {
   }
 }
 
-.container {
-  font-size: 18px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: $app-max-width;
-  padding: 30px;
+.main {
+  background-color: #FAFBFD;
+  padding-top: $app-default-margin;
+  padding-bottom: $app-default-margin;
 }
 
-// page
+.container {
+  margin: 0 auto;
+  max-width: $app-max-width;
+ 
+  @media screen and (max-width: $notebook) {
+    padding: 0 $app-default-margin;
+  }
+}
+
 .page__title {
   margin-top: 0;
 }
