--- a/_includes/modules/post-scraps.html
+++ b/_includes/modules/post-scraps.html
@@ -1,5 +1,5 @@
 {% if page.scraps %}
-  <section>
+  <section class="post-scraps">
     <h2>Recados da semana</h2>
     <ul>
       {% for scrap in page.scraps %}
