--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,10 +22,9 @@ layout: default
         {% when '12' %}Dezembro
       {% endcase %}
       de {{ page.date | date: "%Y" }}
-      <i class="fa fa-calendar-plus-o"></i>
     </span>
     <h1 class="post-cast__header__title">
-      {{ page.title }} <i class="fa fa-music"></i>
+      {{ page.title }}
     </h1>
   </div>
 
