--- a/_scss/modules/_partners.scss
+++ b/_scss/modules/_partners.scss
@@ -23,5 +23,10 @@
   a {
     color: $primary-color;
     font-weight: bold;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
