--- a/_includes/modules/post-links.html
+++ b/_includes/modules/post-links.html
@@ -1,5 +1,5 @@
 {% if page.links %}
-  <section>
+  <section class="post-notes">
     <h2>Notas e Links</h2>
     <ul>
       {% for link in page.links %}
