--- a/_scss/modules/_post-participants.scss
+++ b/_scss/modules/_post-participants.scss
@@ -8,5 +8,10 @@
   a {
     color: $primary-color;
     font-weight: bold;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
