--- a/_scss/modules/blocks/_post-cast.scss
+++ b/_scss/modules/blocks/_post-cast.scss
@@ -44,6 +44,16 @@
     color: $link-color;
     font-weight: 400;
     line-height: 1.5;
+
+    a {
+      color: $primary-color;
+      font-weight: bold;
+      text-decoration: none;
+      
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
   ul {
