--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -21,8 +21,9 @@
 @import "modules/post-links-sponsors";
 @import "modules/post-youtube";
 @import "modules/post-support";
+@import "modules/post-scraps";
+@import "modules/post-notes";
 @import "modules/partners";
-@import "modules/episodes";
 @import "modules/episode";
 @import "modules/community";
 @import "modules/form";
