--- a/_scss/pages/_structure.scss
+++ b/_scss/pages/_structure.scss
@@ -1,24 +1,15 @@
+html {
+  font-size: 16px;
+}
+
 body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-  color: $base-text-color;
-  font-family: $base-font;
-  font-size: $base-font-size;
+  color: #707070;
+  font-family: $roboto-font;
   text-rendering: optimizeLegibility;
 	margin: 0;
 	padding: 0;
-}
-
-a {
-  transition: color .2s ease-in-out;
-  text-decoration: none;
-  color: $link-color;
-  outline: none;
-
-  &:hover,
-  &:active {
-    color: $link-hover-color;
-  }
 }
 
 .image-block {
@@ -39,15 +30,20 @@ a {
   }
 }
 
-.container {
-  font-size: 18px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 710px;
-  padding: 30px;
+.main {
+  background-color: #FAFBFD;
+  padding-top: $app-default-margin;
+  padding-bottom: $app-default-margin;
 }
 
-// page
+.container {
+  margin: 0 auto;
+  max-width: $app-max-width;
+ 
+  @media screen and (max-width: $notebook) {
+    padding: 0 $app-default-margin;
+  }
+}
 
 .page__title {
   margin-top: 0;
