Reintroduce search box

--- a/_includes/modules/quick-access.html
+++ b/_includes/modules/quick-access.html
@@ -1,4 +1,4 @@
-<div id="search-form">
+<div id="search-form" class="search-form">
   <input type="text" placeholder="Buscar episódio" id="search-input">
   <i class="fa fa-search" id="search-icon"></i>
   <ul class="search-results search-list"></ul>
