--- a/_scss/modules/_search.scss
+++ b/_scss/modules/_search.scss
@@ -3,29 +3,19 @@
   position: absolute;
   z-index: 9999;
   box-shadow: 2px 6px 20px 0 #333;
-  padding-left: 15px;
-  margin-top: 0px;
+  padding: 0;
+  margin: 0;
   width: 100%;
-  padding-bottom: 10px;
   left: 0;
+  list-style: none;
 
   .entry-date {
     font-size: 12px;
-    color: #999;
-  }
-
-  li {
-    list-style: none;
-    padding: 3px 0;
   }
 }
 
 .search-results {
-  &:empty {
-    display: none;
-  }
-  h4 {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  .no-results {
+    padding: 15px;
   }
 }
