--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -5,7 +5,7 @@
       Quer fazer uma doação recorrente? <a class="highlight" href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
     </li>
     <li>
-      Faça uma doação pelo Picpay: <a class="highlight" href="https://app.picpay.com/user.html?femontanha">Doar!</a>
+      Faça uma doação pelo Picpay: <a class="highlight" href="https://app.picpay.com/user/femontanha">Doar!</a>
     </li>
     <li>
       Doe com Bitcoin: <strong>3HBEopbvTkXBwy2HsNutzz7wtHxKk18wZM</strong>
