--- a/_scss/pages/_structure.scss
+++ b/_scss/pages/_structure.scss
@@ -8,6 +8,7 @@ body {
   color: #000;
   font-family: $roboto-font;
   text-rendering: optimizeLegibility;
+  font-weight: 300;
 	margin: 0;
 	padding: 0;
 }
