--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -5,7 +5,7 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Podcast sobre desenvolvimento front-end &amp; back-end</title>
   <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="frontend, front-end, backend, back-end, desenvolvimento, programação, podcast, cast, entrevista, episodio, devnaestrada, femontanha, ramon sanches, raymonsanches"/>
 
@@ -40,7 +40,7 @@
 
   <link rel="publisher" href="https://plus.google.com/+DevnaestradaBrazil/">
   <link rel="stylesheet" href="{{ "assets/css/main.css" | prepend: site.baseurl }}">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300|Rubik:400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Rubik:400,500" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
